[workspace]
members = ["advent_*/puzzle_*"]
resolver = "2"

[workspace.package]
# name = "advent_of_code"
version = "1.0.0"
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
rayon = { version = "=1.10.0" }
indicatif = { version = "=0.17.11", features = ["rayon"] }
array-init = { version = "=2.1.0" }
